# sui-invariant-monitor

./: .gitignore  CLOUDFLARE_TUNNEL.md  DEMO_SETUP.md  DEPLOY_STEPS.md  LICENSE  README.md  RECONFIGURE.md  RENDER_DEPLOYMENT.md  VPS_DEPLOYMENT.md  render.yaml
backend/: .env.example  Cargo.toml  Dockerfile  README.md  fly.toml
backend/src/: config.rs  error.rs  main.rs  network.rs
backend/src/aggregator/: mod.rs  state.rs
backend/src/alerting/: discord.rs  mod.rs  webhook.rs
backend/src/analysis/: llm.rs  metadata.rs  mod.rs
backend/src/api/: handlers.rs  mod.rs  routes.rs
backend/src/invariants/: engine.rs  mod.rs  types.rs
backend/src/invariants/definitions/: accounting_balance.rs  collateralization.rs  interest_monotonicity.rs  liquidity_constraint.rs  mod.rs  total_supply.rs
backend/src/sui_client/: fetcher.rs  mod.rs
docs/: DEPLOY_STEPS.md  INVARIANT_DEEP_DIVE.md  RECONFIGURE.md  RENDER_DEPLOY.md  WORKFLOWS.md
frontend/: .env.production  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: AddContractForm.tsx  AnalyzeContractForm.tsx  ComputationDetails.tsx  InvariantCard.tsx  Layout.tsx  NetworkSwitcher.tsx  StatusBadge.tsx
frontend/src/context/: NetworkContext.tsx
frontend/src/hooks/: useInvariants.ts
frontend/src/pages/: InvariantDetail.tsx  Overview.tsx
frontend/src/styles/: index.css
frontend/src/types/: invariant.ts
