[package]
name = "sui-invariant-monitor"
version = "0.1.0"
edition = "2021"
authors = ["Sui Invariant Monitor Team"]
description = "Protocol-level invariant monitoring for Sui smart contracts"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Web framework
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# HTTP client for Sui RPC and alerts
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Environment
dotenvy = "0.15"

# Async trait
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
